--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js"></script>
     <script src="/js/app.js"></script>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css" />
@@ -14,7 +15,7 @@
 <body>
     <div class="header">
         <p style="float:left; margin-left:10px">My Notes App</p>
-        <md-button style="float:right">Logout</md-button>
+        <md-button ng-show="isLogged" ng-click="logout()" style="float:right">Logout</md-button>
     </div>
     <div ng-view=""></div>
 </body>
